kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
    name: kubia-manual
spec:
    nodeSelector:
        gpu: "true"
    containers: 
    - image : hojoony/hello-node
      name : kubia
      ports:
      - containerPort: 3000
        protocol: TCP
