kubia-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
    name: kubia-liveness
spec:
    containers:
    - image: luksa/kubia-unhealthy
      name: kubia
      livenessProbe:
         httpGet:
            path: /
            port: 8080
