kubia-manual-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
    name: kubia-manual-v2
    labels:
        creation_method: manual
        env: prod
spec:
    containers: 
    - image : hojoony/hello-node
      name : kubia
      ports:
      - containerPort: 3000
        protocol: TCP
